src/styles/style.css
:root {
    --main: #F8F5F5;
    --accent: #CC0000;
    --black: #060B0E;
    --text: #060B0E;
  }

.leftBar {
    border-left: 1px solid grey;
    height: 18rem;
    padding-left: 2rem;
}

.tags {
    color: var(--text); 
    font-family: Overpass-SemiBold;  
    font-size: small; 
}

.small {
    color: var(--text);    
}

.title {
    padding-bottom: 1rem;
    width: 100%;
    font-family: Vollkorn; 
    background-color: var(--main); /* Replace with vector bg later */
    color: var(--text);    
}

.proj {
        padding-bottom: 1rem;
        width: 100%;
        font-family: Vollkorn; 
        background-color: var(--main); /* Replace with vector bg later */
        color: var(--text);    
}

.footer {
    width: 100%;
    background-color: var(--black); /* Replace with vector bg later */
    color: var(--main);    
    position: relative;
    left: 0;
    bottom: 0;
  
    padding-top: 1rem;
}

.footer-floor {
    width: 100%;
    background-color: var(--black); /* Replace with vector bg later */
    color: var(--main);    
    position: -fixed;

    bottom: 0;
    padding-top: 2rem;
}

.container {
    font-family: Vollkorn;
}

.bigheader {
    background-color: var(--main);
    color: var(--text);
    font-size: 500%;
    padding-top: 50px;
}

.link {
    color: var(--accent);
    font-family: Vollkorn;
    
}

.link-click {
    text-decoration: none;
    position: relative;
}
  
.link-click:hover {
    text-decoration: underline;
    color: var(--accent);
    /* Make the link darker/lighter? to indicate hover */
}


.icon {
    color: var(--black);
    
}

.icon-click {
    text-decoration: none;
    position: relative;
}
  
.icon-click:hover {
    color: var(--accent);
    /* Make the link darker/lighter? to indicate hover */
}


.icon-dark {
    color: var(--main);
    
}

.icon-click {
    text-decoration: none;
    position: relative;
}
  
.icon-click:hover {
    color: var(--accent);
    /* Make the link darker/lighter? to indicate hover */
}


.link-title {
    color: var(--accent);
    font-size: 150%;
    
}

.link-title-click {
    text-decoration: none;
    position: relative;
}
  
.link-title-click:hover {
    text-decoration: underline;
    color: var(--accent);
    /* Make the link darker/lighter? to indicate hover */
}

.main-stuff {
    min-height: calc(100vh - 5.5rem);
    background-color: var(--main);
    padding-top: 5rem;
}

